--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
   },
   "devDependencies": {
     "vite": "^2.1.3"
+  },
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "firebase": "^8.3.1"
   }
 }
